<?xml version="1.0"?>
<package>
  <name>lattice_navigation_demos</name>
  <version>0.9.0</version>
  <description>Navigation demos using the lattice planner.</description>

  <maintainer email="damjan.miklic@fer.hr">Damjan Miklic</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>agv_control_msgs</run_depend>
  <run_depend>lattice_planner</run_depend>
  <run_depend>pure_pursuit</run_depend>
  <run_depend>p2os_urdf</run_depend>
  <run_depend>fake_localization</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
